新增: 新增meta信息

--- a/divination-game/index.html
+++ b/divination-game/index.html
@@ -1,13 +1,21 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+<head>
+    <meta charset="UTF-8"/>
+    <link rel="icon" type="image/svg+xml" href="/brand.webp"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="description" content="Tristar 占卜小遊戲 - 透過簡單小遊戲，了解你的幸運石。"/>
+    <meta name="keywords" content="Tristar, 占卜, 小遊戲, 幸運石"/>
+    <title>Tristar 占卜小遊戲</title>
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website"/>
+    <meta property="og:url" content="https://tristaraccessory.github.io/TristarDivinationGame/"/>
+    <meta property="og:title" content="Tristar 占卜小遊戲"/>
+    <meta property="og:description" content="透過簡單小遊戲，了解你的幸運石。"/>
+</head>
+<body>
+<div id="root"></div>
+<script type="module" src="/src/main.tsx"></script>
+</body>
 </html>
