新增: 新增完整meta data

--- a/divination-game/index.html
+++ b/divination-game/index.html
@@ -13,6 +13,14 @@
     <meta property="og:url" content="https://tristaraccessory.github.io/TristarDivinationGame/"/>
     <meta property="og:title" content="Tristar 占卜小遊戲"/>
     <meta property="og:description" content="透過簡單小遊戲，了解你的幸運石。"/>
+    <meta property="og:image" content="https://tristaraccessory.github.io/TristarDivinationGame/brand.webp"/>
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image"/>
+    <meta property="twitter:url" content="https://tristaraccessory.github.io/TristarDivinationGame/"/>
+    <meta property="twitter:title" content="Tristar 占卜小遊戲"/>
+    <meta property="twitter:description" content="透過簡單小遊戲，了解你的幸運石。"/>
+    <meta property="twitter:image" content="https://tristaraccessory.github.io/TristarDivinationGame/brand.webp"/>
 </head>
 <body>
 <div id="root"></div>
